Align all items to correct places

--- a/flex/06-flex-layout/style.css
+++ b/flex/06-flex-layout/style.css
@@ -25,3 +25,35 @@ input {
   width: 400px;
   margin-bottom: 16px;
 }
+
+/* changes */
+
+body {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.header {
+  display: flex;
+}
+
+ul {
+  display: flex;
+  gap: 32px;
+}
+
+.right-links {
+  margin-left: auto;
+  justify-content: right;
+}
+
+.content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.footer {
+  display: flex;
+}
